@@ -22,9 +22,13 @@ package org.apache.hadoop.hbase.client;
 
 import org.apache.hadoop.hbase.HColumnDescriptor;
 import org.apache.hadoop.hbase.HTableDescriptor;
-import org.apache.hadoop.hbase.util.Bytes;
 
-class UnmodifyableHTableDescriptor extends HTableDescriptor {
+/**
+ * Read-only table descriptor.
+ * Returned out of {@link HTable.getTableDescriptor}.
+ */
+public class UnmodifyableHTableDescriptor extends HTableDescriptor {
+
   /*
    * Create an unmodifyable copy of an HTableDescriptor
    * @param desc
